--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,4 @@
-server:
-  port: 8096
-
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/consentdb
-    username: postgres
-    password: postgres
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:dev}  # default to dev
+
