--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+    
+    <dependency>
+    <groupId>com.commons</groupId>
+    <artifactId>commons-dto</artifactId>
+    <version>1.0.0</version> <!-- or 0.1.0-SNAPSHOT if you're still evolving it -->
+</dependency>
+    
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
